# kedro-dolt

./: Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml  publish.yaml
kedro_dolt/: __init__.py  hook.py
tests/: test_hook.py
