[tool.poetry]
name = "kedro-dolt"
version = "0.1.0"
description = "Kedro-Dolt Plugin"
authors = ["Max Hoffman <max@dolthub.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"
pymysql = "^1.0.2"
kedro = "^0.17.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
black = "^21.5b1"
mypy = "^0.812"
flake8 = "^3.9.2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
